Improve in the display workspace

--- a/src/main/resources/dev/fraco/minikeep/createNote.fxml
+++ b/src/main/resources/dev/fraco/minikeep/createNote.fxml
@@ -12,81 +12,116 @@
 <?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.paint.Color?>
+<?import javafx.scene.shape.Rectangle?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane prefHeight="600.0" prefWidth="800.0" style="-fx-background-color: #282828;" xmlns="http://javafx.com/javafx/20.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="dev.fraco.minikeep.controllers.CreateNote">
-   <VBox alignment="CENTER" layoutX="241.0" layoutY="-22.0" prefHeight="154.0" prefWidth="317.0">
-      <Label text="Crear Nota" textFill="WHITE">
-         <font>
-            <Font name="System Bold" size="33.0" />
-         </font>
-      </Label>
-   </VBox>
-   <VBox layoutX="153.0" layoutY="81.0" prefHeight="468.0" prefWidth="493.0">
-      <Label text="Titulo" textFill="WHITE" />
-      <TextField fx:id="titleInput" onKeyTyped="#titleHandler" promptText="Un titulo creativo">
-         <VBox.margin>
-            <Insets />
-         </VBox.margin>
-      </TextField>
-      <Label fx:id="headerCounter" alignment="CENTER_RIGHT" contentDisplay="RIGHT" prefHeight="19.0" prefWidth="496.0" text="0/30" textAlignment="RIGHT" textFill="#b6b6b6" />
-      <Label text="Tags" textFill="WHITE" />
-      <TextField fx:id="tagsInput" promptText="tag">
-         <VBox.margin>
-            <Insets bottom="10.0" />
-         </VBox.margin>
-      </TextField>
-      <Label text="Cuerpo" textFill="WHITE" />
-      <TextArea fx:id="bodyInput" onKeyTyped="#bodyHandler" prefHeight="139.0" prefWidth="493.0" wrapText="true">
-         <VBox.margin>
-            <Insets />
-         </VBox.margin>
-      </TextArea>
-      <Label fx:id="bodyCounter" alignment="CENTER_RIGHT" contentDisplay="RIGHT" prefHeight="19.0" prefWidth="496.0" text="0/200" textAlignment="RIGHT" textFill="#b6b6b6" />
-      <HBox prefHeight="54.0" prefWidth="493.0">
-         <VBox prefHeight="67.0" prefWidth="246.0">
-            <Label text="Color" textFill="WHITE" />
-            <ColorPicker fx:id="colorInput">
-               <VBox.margin>
-                  <Insets bottom="10.0" />
-               </VBox.margin>
-               <value>
-                  <Color red="0.7538405656814575" green="0.007187230046838522" blue="0.7795872092247009" />
-               </value>
-            </ColorPicker>
-         </VBox>
-         <VBox prefHeight="200.0" prefWidth="250.0">
-            <Label text="Prioridad" textFill="WHITE" />
-            <ChoiceBox fx:id="priorityCombo" prefWidth="150.0" />
-         </VBox>
-         <VBox prefHeight="200.0" prefWidth="250.0">
-            <Label text="Fecha de Recordatorio" textFill="WHITE" />
-            <DatePicker fx:id="reminderPicker">
-               <VBox.margin>
-                  <Insets bottom="30.0" />
-               </VBox.margin>
-            </DatePicker>
-         </VBox>
-      </HBox>
-      <Label text="Colaboradores (email separados por coma)" textFill="WHITE" />
-      <TextField fx:id="collaboratorsInput" promptText="amigo1@g.com, amigo2@a.cl, amigo3@vv.cl ...">
-         <VBox.margin>
-            <Insets bottom="10.0" />
-         </VBox.margin>
-      </TextField>
-      <HBox fx:id="errorBox" alignment="CENTER" prefHeight="58.0" prefWidth="300.0" style="-fx-background-color: #cc241d; -fx-border-radius: 8;" visible="false">
-         <VBox.margin>
-            <Insets bottom="10.0" top="10.0" />
-         </VBox.margin>
-         <Label fx:id="errorLabel" alignment="CENTER" contentDisplay="CENTER" prefHeight="26.0" prefWidth="501.0" text="Error en email y/o contraseña" textAlignment="CENTER" textFill="#fff9e9" wrapText="true">
+<AnchorPane prefHeight="700.0" prefWidth="1000.0" style="-fx-background-color: linear-gradient(to top, #000, #434343)" stylesheets="@css/styles.css" xmlns="http://javafx.com/javafx/20.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="dev.fraco.minikeep.controllers.CreateNote">
+    <VBox layoutX="227.0" layoutY="69.0" prefHeight="551.0" prefWidth="547.0" style="-fx-background-color: #282828;">
+        <Label text="Titulo" textFill="WHITE">
             <font>
-               <Font name="System Bold" size="13.0" />
+                <Font name="SF Pro Display Bold" size="14.0" />
             </font>
-         </Label>
-      </HBox>
-      <HBox alignment="CENTER" prefHeight="43.0" prefWidth="493.0" spacing="30.0">
-         <Button mnemonicParsing="false" onAction="#backHandler" text="Volver Atras" />
-         <Button mnemonicParsing="false" onAction="#addHandler" text="Añadir Nota" />
-      </HBox>
-   </VBox>
+        </Label>
+        <TextField fx:id="titleInput" onKeyTyped="#titleHandler" styleClass="common-text-input">
+            <VBox.margin>
+                <Insets />
+            </VBox.margin>
+        </TextField>
+        <Label fx:id="headerCounter" alignment="CENTER_RIGHT" contentDisplay="RIGHT" prefHeight="19.0" prefWidth="496.0" text="0/30" textAlignment="RIGHT" textFill="#b6b6b6" />
+        <Label text="Tags" textFill="WHITE">
+            <font>
+                <Font name="SF Pro Display Bold" size="14.0" />
+            </font>
+        </Label>
+        <TextField fx:id="tagsInput" styleClass="common-text-input">
+            <VBox.margin>
+                <Insets bottom="10.0" />
+            </VBox.margin>
+        </TextField>
+        <Label text="Cuerpo" textFill="WHITE">
+            <font>
+                <Font name="SF Pro Display Bold" size="14.0" />
+            </font>
+        </Label>
+        <TextArea fx:id="bodyInput" onKeyTyped="#bodyHandler" prefHeight="139.0" prefWidth="493.0" wrapText="true">
+            <VBox.margin>
+                <Insets />
+            </VBox.margin>
+        </TextArea>
+        <Label fx:id="bodyCounter" alignment="CENTER_RIGHT" contentDisplay="RIGHT" prefHeight="19.0" prefWidth="496.0" text="0/200" textAlignment="RIGHT" textFill="#b6b6b6" />
+        <HBox alignment="CENTER" prefHeight="54.0" prefWidth="493.0" spacing="20.0">
+            <VBox prefHeight="67.0" prefWidth="246.0">
+                <Label text="Color" textFill="WHITE">
+                    <font>
+                        <Font name="SF Pro Display Bold" size="14.0" />
+                    </font>
+                </Label>
+                <ColorPicker fx:id="colorInput" styleClass="common-text-input">
+                    <VBox.margin>
+                        <Insets bottom="10.0" />
+                    </VBox.margin>
+                    <value>
+                        <Color red="0.7538405656814575" green="0.007187230046838522" blue="0.7795872092247009" />
+                    </value>
+                </ColorPicker>
+            </VBox>
+            <VBox prefHeight="200.0" prefWidth="250.0">
+                <Label text="Prioridad" textFill="WHITE">
+                    <font>
+                        <Font name="SF Pro Display Bold" size="14.0" />
+                    </font>
+                </Label>
+                <ChoiceBox fx:id="priorityCombo" prefWidth="150.0" styleClass="common-text-input" />
+            </VBox>
+            <VBox prefHeight="200.0" prefWidth="250.0">
+                <Label text="Fecha de Recordatorio" textFill="WHITE">
+                    <font>
+                        <Font name="SF Pro Display Bold" size="14.0" />
+                    </font>
+                </Label>
+                <DatePicker fx:id="reminderPicker">
+                    <VBox.margin>
+                        <Insets bottom="30.0" />
+                    </VBox.margin>
+                </DatePicker>
+            </VBox>
+         <VBox.margin>
+            <Insets top="5.0" />
+         </VBox.margin>
+        </HBox>
+        <Label text="Colaboradores (email separados por coma)" textFill="WHITE">
+            <font>
+                <Font name="SF Pro Display Bold" size="14.0" />
+            </font>
+        </Label>
+        <TextField fx:id="collaboratorsInput" styleClass="common-text-input">
+            <VBox.margin>
+                <Insets bottom="10.0" />
+            </VBox.margin>
+        </TextField>
+        <HBox fx:id="errorBox" alignment="CENTER" prefHeight="58.0" prefWidth="300.0" style="-fx-background-color: #FF0D4B; -fx-border-radius: 8;" visible="false">
+            <VBox.margin>
+                <Insets bottom="20.0" top="10.0" />
+            </VBox.margin>
+            <Label fx:id="errorLabel" alignment="CENTER" contentDisplay="CENTER" prefHeight="26.0" prefWidth="501.0" text="Error en email y/o contraseña" textAlignment="CENTER" textFill="#fff9e9" wrapText="true">
+                <font>
+                    <Font name="System Bold" size="13.0" />
+                </font>
+            <padding>
+               <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
+            </padding>
+            <HBox.margin>
+               <Insets />
+            </HBox.margin>
+            </Label>
+        </HBox>
+        <HBox alignment="CENTER" prefHeight="43.0" prefWidth="493.0" spacing="30.0">
+            <Button mnemonicParsing="false" onAction="#backHandler" prefWidth="120.0" styleClass="common-btn" text="Cancelar" />
+            <Button mnemonicParsing="false" onAction="#addHandler" prefWidth="120.0" styleClass="common-btn" text="Añadir Nota" />
+        </HBox>
+        <padding>
+            <Insets bottom="30.0" left="30.0" right="30.0" top="30.0" />
+        </padding>
+    </VBox>
+   <Rectangle arcHeight="5.0" arcWidth="5.0" fill="#ffbb00" height="19.0" layoutX="227.0" layoutY="68.0" stroke="BLACK" strokeType="INSIDE" width="548.0" />
 </AnchorPane>
