--- a/src/main/resources/dev/fraco/minikeep/sign-in.fxml
+++ b/src/main/resources/dev/fraco/minikeep/sign-in.fxml
@@ -10,47 +10,103 @@
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane prefHeight="600.0" prefWidth="800.0" style="-fx-background-color: #282828;" xmlns="http://javafx.com/javafx/20.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="dev.fraco.minikeep.controllers.SignIn">
-   <VBox alignment="CENTER" layoutX="240.0" layoutY="-21.0" prefHeight="154.0" prefWidth="317.0">
-      <Label text="Crear Cuenta" textFill="WHITE">
+<AnchorPane prefHeight="700.0" prefWidth="1000.0" style="-fx-background-color: #282828;" xmlns="http://javafx.com/javafx/20.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="dev.fraco.minikeep.controllers.SignIn">
+   <VBox alignment="CENTER" layoutX="341.0" prefHeight="154.0" prefWidth="317.0">
+      <children>
+         <Label text="Crear Cuenta" textFill="WHITE">
+            <font>
+               <Font name="System Bold" size="43.0" />
+            </font>
+         </Label>
+      </children>
+   </VBox>
+   <VBox layoutX="350.0" layoutY="154.0" prefHeight="448.0" prefWidth="300.0">
+      <Label text="Nombre" textFill="#ddc7a1">
          <font>
-            <Font name="System Bold" size="43.0" />
+            <Font size="14.0" />
          </font>
       </Label>
-   </VBox>
-   <VBox layoutX="249.0" layoutY="112.0" prefHeight="448.0" prefWidth="300.0">
-      <Label text="Nombre" textFill="WHITE" />
-      <TextField fx:id="firstNameInput">
+      <TextField fx:id="firstNameInput" style="-fx-background-color: #1D2021; -fx-text-fill: #d4be98;">
          <VBox.margin>
             <Insets bottom="10.0" />
          </VBox.margin>
+         <padding>
+            <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
+         </padding>
+         <font>
+            <Font size="14.0" />
+         </font>
       </TextField>
-      <Label text="Apellido" textFill="WHITE" />
-      <TextField fx:id="lastNameInput">
+      <Label text="Apellido" textFill="#ddc7a1">
+         <font>
+            <Font size="14.0" />
+         </font>
+      </Label>
+      <TextField fx:id="lastNameInput" style="-fx-background-color: #1D2021; -fx-text-fill: #d4be98;">
          <VBox.margin>
             <Insets bottom="10.0" />
          </VBox.margin>
+         <padding>
+            <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
+         </padding>
+         <font>
+            <Font size="14.0" />
+         </font>
       </TextField>
-      <Label text="Numero de matricula" textFill="WHITE" />
-      <TextField fx:id="registrationNumberInput">
+      <Label text="Numero de matricula" textFill="#ddc7a1">
+         <font>
+            <Font size="14.0" />
+         </font>
+      </Label>
+      <TextField fx:id="registrationNumberInput" style="-fx-background-color: #1D2021; -fx-text-fill: #d4be98;">
          <VBox.margin>
             <Insets bottom="10.0" />
          </VBox.margin>
+         <padding>
+            <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
+         </padding>
+         <font>
+            <Font size="14.0" />
+         </font>
       </TextField>
-      <Label text="Correo" textFill="WHITE" />
-      <TextField fx:id="emailInput">
+      <Label text="Correo" textFill="#ddc7a1">
+         <font>
+            <Font size="14.0" />
+         </font>
+      </Label>
+      <TextField fx:id="emailInput" style="-fx-background-color: #1D2021; -fx-text-fill: #d4be98;">
          <VBox.margin>
             <Insets bottom="10.0" />
          </VBox.margin>
+         <padding>
+            <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
+         </padding>
+         <font>
+            <Font size="14.0" />
+         </font>
       </TextField>
-      <Label text="Telefono" textFill="WHITE" />
-      <TextField fx:id="phoneInput">
+      <Label text="Telefono" textFill="#ddc7a1">
+         <font>
+            <Font size="14.0" />
+         </font>
+      </Label>
+      <TextField fx:id="phoneInput" style="-fx-background-color: #1D2021; -fx-text-fill: #d4be98;">
          <VBox.margin>
             <Insets bottom="10.0" />
          </VBox.margin>
+         <padding>
+            <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
+         </padding>
+         <font>
+            <Font size="14.0" />
+         </font>
       </TextField>
-      <Label text="Fecha de Nacimiento" textFill="WHITE" />
-      <DatePicker fx:id="dateInput">
+      <Label text="Fecha de Nacimiento" textFill="#ddc7a1">
+         <font>
+            <Font size="14.0" />
+         </font>
+      </Label>
+      <DatePicker fx:id="dateInput" style="-fx-background-color: #1D2021; -fx-text-fill: #d4be98;">
          <VBox.margin>
             <Insets bottom="20.0" />
          </VBox.margin>
