--- a/src/main/resources/dev/fraco/minikeep/workspace.fxml
+++ b/src/main/resources/dev/fraco/minikeep/workspace.fxml
@@ -2,49 +2,46 @@
 
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
-<?import javafx.scene.control.Label?>
 <?import javafx.scene.control.TableColumn?>
 <?import javafx.scene.control.TableView?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.VBox?>
+<?import javafx.scene.text.Font?>
 
-<AnchorPane prefHeight="600.0" prefWidth="800.0" xmlns="http://javafx.com/javafx/20.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="dev.fraco.minikeep.controllers.Workspace">
-    <VBox prefHeight="600.0" prefWidth="801.0" style="-fx-background-color: #323232;">
-        <HBox alignment="CENTER" prefHeight="50.0" prefWidth="802.0" spacing="50.0">
-            <Button mnemonicParsing="false" onAction="#moveToCreateNote" text="Crear Nueva Nota" />
-            <Button mnemonicParsing="false" onAction="#moveToTheTrash" text="Abrir Papelera" />
-            <Button mnemonicParsing="false" onAction="#moveToLogin" text="Cerrar Sesion" />
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="700.0" prefWidth="1000.0" style="-fx-background-color: linear-gradient(to top,#000, #434343);" stylesheets="@css/styles.css" xmlns="http://javafx.com/javafx/20.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="dev.fraco.minikeep.controllers.Workspace">
+    <HBox alignment="CENTER_RIGHT" layoutX="20.0" layoutY="14.0" prefHeight="55.0" prefWidth="960.0" style="-fx-background-color: #282828;">
+        <VBox alignment="CENTER_LEFT" prefHeight="56.0" prefWidth="549.0">
+            <padding>
+                <Insets left="20.0" right="120.0" />
+            </padding>
+            <TextField fx:id="searchBar" onKeyTyped="#searchHandler" prefHeight="28.0" prefWidth="476.0" promptText="Buscar entre las notas" style="-fx-background-color: #1D2021; -fx-text-fill: #D4BE98;">
+            <font>
+               <Font size="14.0" />
+            </font>
             <VBox.margin>
-                <Insets top="20.0" />
+               <Insets />
             </VBox.margin>
-        </HBox>
-        <VBox prefHeight="60.0" prefWidth="561.0">
-
-            <Label text="Buscar:" textFill="WHITE" />
-            <TextField fx:id="searchBar" onKeyTyped="#searchHandler" />
-            <VBox.margin>
-                <Insets left="100.0" right="100.0" />
-            </VBox.margin>
+            <padding>
+               <Insets bottom="5.0" left="10.0" right="10.0" top="5.0" />
+            </padding></TextField>
         </VBox>
-        <Label text="Doble click para abrir y modificar" textFill="WHITE">
-            <VBox.margin>
-                <Insets top="20.0" />
-            </VBox.margin>
-        </Label>
-        <TableView fx:id="notesTable" editable="true" prefHeight="516.0" prefWidth="802.0">
-            <columns>
-                <TableColumn fx:id="colColor" onEditStart="#startEdit" prefWidth="30.0" resizable="false" />
-                <TableColumn fx:id="colHeader" onEditStart="#startEdit" prefWidth="341.10133171081543" text="Titulo" />
-                <TableColumn fx:id="colTags" onEditStart="#startEdit" prefWidth="107.7161865234375" text="Tag" />
-                <TableColumn fx:id="colPriority" minWidth="0.0" onEditStart="#startEdit" resizable="false" text="Prioridad" />
-                <TableColumn fx:id="colCreated" minWidth="1.0" onEditStart="#startEdit" prefWidth="120.0" resizable="false" text="Creada" />
-                <TableColumn fx:id="colEdited" onEditStart="#startEdit" prefWidth="120.0" resizable="false" text="Editada" />
-            </columns>
-            <columnResizePolicy>
-                <TableView fx:constant="CONSTRAINED_RESIZE_POLICY" />
-            </columnResizePolicy>
-        </TableView>
-    </VBox>
+        <Button mnemonicParsing="false" onAction="#moveToCreateNote" prefHeight="55.0" prefWidth="193.0" styleClass="menu-btn" text="Crear Nueva Nota" />
+        <Button mnemonicParsing="false" onAction="#moveToTheTrash" prefHeight="55.0" prefWidth="147.0" styleClass="menu-btn" text="Abrir Papelera" />
+        <Button mnemonicParsing="false" onAction="#moveToLogin" prefHeight="55.0" prefWidth="141.0" styleClass="menu-btn" text="Cerrar Sesion" />
+    </HBox>
+    <TableView fx:id="notesTable" editable="true" layoutX="20.0" layoutY="81.0" prefHeight="600.0" prefWidth="960.0" style="-fx-selection-bar: blue;">
+        <columns>
+            <TableColumn fx:id="colColor" onEditStart="#startEdit" prefWidth="10.0" reorderable="false" resizable="false" />
+            <TableColumn fx:id="colHeader" onEditStart="#startEdit" prefWidth="448.0" reorderable="false" resizable="false" text="Titulo" />
+            <TableColumn fx:id="colTags" onEditStart="#startEdit" prefWidth="100.0" reorderable="false" resizable="false" text="Tag" />
+            <TableColumn fx:id="colPriority" onEditStart="#startEdit" prefWidth="100.0" reorderable="false" resizable="false" text="Prioridad" />
+            <TableColumn fx:id="colCreated" onEditStart="#startEdit" prefWidth="150.0" reorderable="false" resizable="false" text="Creada" />
+            <TableColumn fx:id="colEdited" onEditStart="#startEdit" prefWidth="150.0" reorderable="false" resizable="false" text="Editada" />
+        </columns>
+        <columnResizePolicy>
+            <TableView fx:constant="CONSTRAINED_RESIZE_POLICY" />
+        </columnResizePolicy>
+    </TableView>
 </AnchorPane>
