--- a/src/main/resources/dev/fraco/minikeep/workspace.fxml
+++ b/src/main/resources/dev/fraco/minikeep/workspace.fxml
@@ -10,6 +10,7 @@
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
+<?import javafx.scene.control.Label?>
 <AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="700.0" prefWidth="1000.0" style="-fx-background-color: linear-gradient(to top,#000, #434343);" stylesheets="@css/styles.css" xmlns="http://javafx.com/javafx/20.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="dev.fraco.minikeep.controllers.Workspace">
     <HBox alignment="CENTER_RIGHT" layoutX="20.0" layoutY="14.0" prefHeight="55.0" prefWidth="960.0" style="-fx-background-color: #282828;">
         <VBox alignment="CENTER_LEFT" prefHeight="56.0" prefWidth="549.0">
@@ -31,17 +32,20 @@
         <Button mnemonicParsing="false" onAction="#moveToTheTrash" prefHeight="55.0" prefWidth="147.0" styleClass="menu-btn" text="Abrir Papelera" />
         <Button mnemonicParsing="false" onAction="#moveToLogin" prefHeight="55.0" prefWidth="141.0" styleClass="menu-btn" text="Cerrar Sesion" />
     </HBox>
-    <TableView fx:id="notesTable" editable="true" layoutX="20.0" layoutY="81.0" prefHeight="600.0" prefWidth="960.0" style="-fx-selection-bar: blue;">
+    <TableView fx:id="notesTable" editable="true" layoutX="20.0" layoutY="81.0" prefHeight="600.0" prefWidth="960.0">
+        <placeholder>
+            <Label text="No hay notas en la tabla" />
+        </placeholder>
         <columns>
-            <TableColumn fx:id="colColor" onEditStart="#startEdit" prefWidth="10.0" reorderable="false" resizable="false" />
-            <TableColumn fx:id="colHeader" onEditStart="#startEdit" prefWidth="448.0" reorderable="false" resizable="false" text="Titulo" />
+            <TableColumn fx:id="colColor" onEditStart="#startEdit" prefWidth="40.0" reorderable="false" resizable="false" />
+            <TableColumn fx:id="colHeader" onEditStart="#startEdit" prefWidth="400.0" reorderable="false" resizable="false" text="Titulo" />
             <TableColumn fx:id="colTags" onEditStart="#startEdit" prefWidth="100.0" reorderable="false" resizable="false" text="Tag" />
             <TableColumn fx:id="colPriority" onEditStart="#startEdit" prefWidth="100.0" reorderable="false" resizable="false" text="Prioridad" />
             <TableColumn fx:id="colCreated" onEditStart="#startEdit" prefWidth="150.0" reorderable="false" resizable="false" text="Creada" />
             <TableColumn fx:id="colEdited" onEditStart="#startEdit" prefWidth="150.0" reorderable="false" resizable="false" text="Editada" />
         </columns>
         <columnResizePolicy>
-            <TableView fx:constant="CONSTRAINED_RESIZE_POLICY" />
+            <TableView fx:constant="UNCONSTRAINED_RESIZE_POLICY" />
         </columnResizePolicy>
     </TableView>
 </AnchorPane>
