--- a/src/main/resources/dev/fraco/minikeep/login.fxml
+++ b/src/main/resources/dev/fraco/minikeep/login.fxml
@@ -15,7 +15,7 @@
 <?import javafx.scene.paint.Stop?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane prefHeight="700.0" prefWidth="1000.0" style="-fx-background-color: linear-gradient(to top,#000, #434343);" xmlns="http://javafx.com/javafx/20.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="dev.fraco.minikeep.controllers.Login">
+<AnchorPane id="login-ap" prefHeight="700.0" prefWidth="1000.0" style="-fx-background-color: linear-gradient(to top,#000, #434343);" xmlns="http://javafx.com/javafx/20" xmlns:fx="http://javafx.com/fxml/1" fx:controller="dev.fraco.minikeep.controllers.Login">
     <VBox layoutX="283.0" layoutY="136.0" prefHeight="428.0" prefWidth="434.0" style="-fx-background-color: #282828; -fx-border-radius: 20px 20px 20px 20px;">
         <padding>
             <Insets bottom="30.0" left="30.0" right="30.0" top="30.0" />
@@ -23,12 +23,9 @@
         <VBox alignment="CENTER" prefHeight="101.0" prefWidth="212.0">
             <HBox alignment="CENTER" prefHeight="100.0" prefWidth="200.0">
                 <ImageView fitHeight="47.0" fitWidth="42.0">
-                    <Image url="@logo.png" />
+                    <Image url="@images/logo.png" />
                 </ImageView>
-                <Label text="MiniKeep">
-                    <font>
-                        <Font name="Roboto Bold" size="48.0" />
-                    </font>
+                <Label id="main-header" text="MiniKeep" style="-fx-font-family: 'SF Pro';-fx-font-size: 48px;">
                     <textFill>
                         <LinearGradient cycleMethod="REFLECT" endX="1.0" endY="1.0">
                             <stops>
@@ -49,14 +46,14 @@
             </HBox>
             <Label text="Una app para tomar notas" textFill="#ddc7a1" translateY="-14.0">
                 <font>
-                    <Font name="Roboto Regular" size="14.0" />
+                    <Font name="OpenSans" size="14.0" />
                 </font>
             </Label>
         </VBox>
         <VBox prefHeight="272.0" prefWidth="373.0" translateY="15.0">
             <Label style="-fx-font-weight: bold;" text="Email" textFill="#ddc7a1">
                 <font>
-                    <Font name="Roboto Regular" size="14.0" />
+                    <Font name="OpenSans" size="14.0" />
                 </font>
             </Label>
             <TextField fx:id="emailField" promptText="sample@domain.cl" styleClass="common-text-input" stylesheets="@css/styles.css">
@@ -69,47 +66,31 @@
                 <padding>
                     <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
                 </padding>
-                <font>
-                    <Font name="Roboto Regular" size="14.0" />
-                </font>
             </TextField>
             <Label style="-fx-font-weight: bold;" text="Contraseña" textFill="#ddc7a1">
-                <font>
-                    <Font name="Roboto Regular" size="14.0" />
-                </font>
             </Label>
             <PasswordField fx:id="passwordField" onAction="#tryToLogin" promptText="**********" style="-fx-background-color: #1d2021; -fx-text-fill: #d4be98;" styleClass="common-text-input" stylesheets="@css/styles.css">
                 <padding>
                     <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
                 </padding>
-                <font>
-                    <Font name="Roboto Regular" size="14.0" />
-                </font>
             </PasswordField>
             <HBox fx:id="errorLabel" alignment="CENTER" prefHeight="60.0" prefWidth="317.0" style="-fx-background-color: #ea6962;" visible="false">
                 <VBox.margin>
                     <Insets bottom="10.0" top="10.0" />
                 </VBox.margin>
                 <Label alignment="CENTER" contentDisplay="CENTER" prefHeight="19.0" prefWidth="365.0" text="Email y/o contraseña incorrecto" textAlignment="CENTER" textFill="#282828">
-                    <font>
-                        <Font name="System Bold" size="14.0" />
-                    </font>
+
                 </Label>
                 <padding>
                     <Insets bottom="10.0" top="10.0" />
                 </padding>
             </HBox>
-            <Button fx:id="loginButton" mnemonicParsing="false" onAction="#tryToLogin" prefHeight="31.0" prefWidth="398.0" style="-fx-background-color: #fff; -fx-border-color: none;" text="Iniciar Sesión" textFill="#111111">
-                <font>
-                    <Font name="Roboto Bold" size="14.0" />
-                </font>
+            <Button id="loginButton" fx:id="loginButton" mnemonicParsing="false" onAction="#tryToLogin" prefHeight="31.0" prefWidth="398.0" style="-fx-background-color: #fff; -fx-border-color: none;" text="Iniciar Sesión" textFill="#111111">
+
             </Button>
             <HBox alignment="TOP_RIGHT" prefHeight="100.0" prefWidth="200.0">
                 <Label prefHeight="31.0" prefWidth="190.0" text="¿Aún no tienes una cuenta?" textFill="WHITE" translateX="36.0" />
                 <Button fx:id="signInButton" mnemonicParsing="false" onAction="#moveToSignIn" prefHeight="31.0" prefWidth="103.0" style="-fx-background-color: none; -fx-underline: true;" text="Crear Cuenta" textFill="#7daea3" translateX="6.0">
-                    <font>
-                        <Font name="Roboto Bold" size="14.0" />
-                    </font>
                 </Button>
             </HBox>
         </VBox>
