--- a/src/main/resources/dev/fraco/minikeep/css/styles.css
+++ b/src/main/resources/dev/fraco/minikeep/css/styles.css
@@ -1,8 +1,29 @@
+@font-face {
+    -fx-font-family: "OpenSans";
+    src: url("../fonts/OpenSans-VariableFont_wdth,wght.ttf");
+}
+
+@font-face {
+    -fx-font-family: "SF Pro";
+    src: url("../fonts/SF-Pro.ttf");
+}
+
+#loginButton {
+    -fx-font-weight: bold;
+    -fx-font-size: 16px;
+}
+
 .table-view .scroll-bar {
     -fx-background-color: #282828;
 }
+
 .table-view .thumb {
     -fx-background-color: #1d2021;
+}
+
+#main-header {
+    -fx-font-family: "SF Pro";
+    -fx-font-weight: bold;
 }
 
 .table-view .filler {
@@ -11,7 +32,7 @@
 
 .table-view {
     -fx-background-color: none;
-    -fx-font-family: "SF Pro Display";
+    -fx-font-family: "SF Pro";
     -fx-font-size: 16px;
     -fx-border-radius: 5px 5px 5px 5px;
 }
